# CG_Project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ObjectModel/: ObjectModel.cpp
media/Wall_panel/: Wall_Panel.mtl
media/model/tree/: woodSpring.mtl
media/shader/main/: main.frag.glsl  main.vert.glsl  main_fs.txt  main_vs.txt
media/shader/objModel/: objModel.frag.glsl  objModel.vert.glsl  objModel_fs.txt  objModel_vs.txt
media/shader/shadow/: shadow.frag.glsl  shadow.vert.glsl
media/shader/singleTexture/: singleTexture_fs.txt
media/shader/water/: water.frag.glsl  water.vert.glsl  water_fs.glsl
media/shader/window/: window_fs.txt
src/: main.cpp
src/base/: AnimatedDog.cpp  AnimatedDog.h  ImGuiController.cpp  LightingPanel.cpp  ModelTransformPanel.cpp  ObjectModel.cpp  OurObjLoader.h  PathHelper.cpp  PoolObject.cpp  PoolObject.h  SceneManager.cpp  SceneManager.h  SceneObject.h  SwimmingPool.cpp  SwimmingPool.h  TreeObject.cpp  TreeObject.h  camera.cpp  characterPanel.cpp  column.cpp  girraffe.cpp  girraffe.h  ourloader.cpp  shader.cpp  shader.h  skybox.cpp  sphere.cpp  square.cpp  tapering.cpp
src/include/: door.h  draw_object.h  floor.h  ground.h  inside.h  light.h  roof.h  shader.h  skybox.h  table.h  wall.h  window.h
src/include/ObjectModel/: ObjectModel.cpp  ObjectModel.h
src/include/OurObjLoader/: OurObjLoader.h
src/include/UIsystem/: IImGuiPanel.h  ImGuiController.h  LightingPanel.cpp  LightingPanel.h  ModelTransformPanel.cpp  ModelTransformPanel.h
src/include/base/: IImGuiPanel.h  ImGuiController.h  LightingPanel.h  ModelTransformPanel.h  PathHelper.h  camera.h  characterPanel.h  column.h  draw_object.h  light.h  shader.h  skybox.h  sphere.h  square.h  tapering.h
src/include/inside/: calligraphy.h  chair.h  clock.h  floor.h  inner_wall.h  inside.h  table.h
src/include/outside/: door.h  fence.h  grain_heap.h  ground.h  outside.h  path.h  roof.h  stone.h  tree.h  wall.h  window.h
src/inside/: calligraphy.cpp  chair.cpp  clock.cpp  floor.cpp  inner_wall.cpp  inside.cpp  table.cpp
src/outside/: door.cpp  fence.cpp  floor.cpp  grain_heap.cpp  ground.cpp  outside.cpp  path.cpp  roof.cpp  stone.cpp  tree.cpp  wall.cpp  window.cpp
